@@ -1,143 +1,61 @@
-WildFly Quickstarts
+WildFly Swarm 
 ====================
-Summary: The quickstarts demonstrate Java EE 7 and a few additional technologies from the JBoss stack. They provide small, specific, working examples that can be used as a reference for your own project.  
+Exemplo que demonstra o uso tecnologia Java EE 7 (JPA 2, CDI, EJB 3.1 and JAX-RS) com wildfly swarm.  
 
-Introduction
+Introdução
 ------------
 clean package wildfly-swarm:run
 
-These quickstarts run on JBoss WildFly. This version uses the correct dependencies and ensures you test and compile against your runtime environment.
+Esse projeto é dividido em 2 modulos, Campanha e Socio Torcedor.
 
-Be sure to read this entire document before you attempt to work with the quickstarts. It contains the following information:
 
-* [Available Quickstarts](#available-quickstarts): List of the available quickstarts and details about each one.
-
-* [Suggested Approach to the Quickstarts](#suggested-approach-to-the-quickstarts): A suggested approach on how to work with the quickstarts.
-
-* [System Requirements](#system-requirements): List of software required to run the quickstarts.
+* [Requisitos](#system-requirements): Lista de softwares necessarios para executar exemplo.
 
 * [Configure Maven](https://github.com/jboss-developer/jboss-developer-shared-resources/blob/master/guides/CONFIGURE_MAVEN.md): How to configure the Maven repository for use by the quickstarts.
+* [Postgres](Roteiro para criação banco de dados em Orientacao/ProcedimentosBD).
 
-* [Run the Quickstarts](#run-the-quickstarts): General instructions for building, deploying, and running the quickstarts.
-
-* [Run the Arquillian Tests](https://github.com/jboss-developer/jboss-developer-shared-resources/blob/master/guides/RUN_ARQUILLIAN_TESTS.md#run-the-arquillian-tests): How to run the Arquillian tests provided by some of the quickstarts.
-
-* [Optional Components](#optional-components): How to install and configure optional components required by some of the quickstarts.
-
-* [Contributing Guide](https://github.com/jboss-developer/jboss-developer-shared-resources/blob/master/guides/CONTRIBUTING.md#jboss-developer-contributing-guide): This document contains information targeted for developers who want to contribute to JBoss developer projects.
-
-Use of WILDFLY_HOME and JBOSS_HOME Variables
+Documentação API
 ---------------------------------
+Utilizando Swagger Editor: http://editor.swagger.io
 
-The quickstart README files use the *replaceable* value `WILDFLY_HOME` to denote the path to the WildFly installation. When you encounter this value in a README file, be sure to replace it with the actual path to your WildFly installation. The installation path is described in detail here: [Use of WILDFLY_HOME and JBOSS_HOME Variables](https://github.com/jboss-developer/jboss-developer-shared-resources/blob/master/guides/USE_OF_EAP7_HOME.md#use-of-eap_home-and-jboss_home-variables).
+1. campanha/src/main/resources/swagger.json
+2. socio-torcedor/src/main/resources/swagger.json
 
-
-Available Quickstarts
+Uso do Jmeter para testes integrados
 ---------------------
 
-All available quickstarts can be found here: <http://www.jboss.org/developer-materials/#!formats=jbossdeveloper_quickstart>. You can filter by the quickstart name, the product, and the technologies demonstrated by the quickstart. You can also limit the results based on skill level and date published. The resulting page provides a brief description of each matching quickstart, the skill level, and the technologies used. Click on the quickstart to see more detailed information about how to run it. Some quickstarts require deployment of other quickstarts. This information is noted in the `Prerequisites` section of the quickstart README file.
-
-_Note_: Some of these quickstarts use the H2 database included with WildFly. It is a lightweight, relational example datasource that is used for examples only. It is not robust or scalable, is not supported, and should NOT be used in a production environment!
+* CampanhaEndpoint.jmx
 
 
-[TOC-quickstart]
-
-
-Suggested Approach to the Quickstarts
+Arquitetura
 -------------------------------------
 
-We suggest you approach the quickstarts as follows:
+Projeto foi divido em 2 microserviços, Campanha e SocioTorcedor.
+Cada módulo tem seu proprio banco de dados, porém a estrategia de compartilhamento das informações da entidade TimeCoração e Campanha deveria utilizar uma estratégia de cache distribuído usando jboss infinispan ou apache kafka.
 
-* Regardless of your level of expertise, we suggest you start with the **helloworld** quickstart. It is the simplest example and is an easy way to prove your server is configured and started correctly.
-* If you are a beginner or new to JBoss, start with the quickstarts labeled **Beginner**, then try those marked as **Intermediate**. When you are comfortable with those, move on to the **Advanced** quickstarts.
-* Some quickstarts are based upon other quickstarts but have expanded capabilities and functionality. If a prerequisite quickstart is listed, be sure to deploy and test it before looking at the expanded version.
 
 
 System Requirements
 -------------------
 
-The applications these projects produce are designed to be run on Red Hat JBoss Enterprise Application Platform 7 or later. 
 
-All you need to build these projects is Java 8.0 (Java SDK 1.8) or later and Maven 3.1.1 or later. See [Configure Maven for WildFly 10](https://github.com/jboss-developer/jboss-developer-shared-resources/blob/master/guides/CONFIGURE_MAVEN_JBOSS_EAP7.md#configure-maven-to-build-and-deploy-the-quickstarts) to make sure you are configured correctly for testing the quickstarts.
-
-To run these quickstarts with the provided build scripts, you need the the WildFly distribution ZIP. For information on how to install and run JBoss, see the [Red Hat JBoss Enterprise Application Platform Documentation](https://access.redhat.com/documentation/en-US/JBoss_Enterprise_Application_Platform/) _Getting Started Guide_ located on the Customer Portal.
-
-You can also use [JBoss Developer Studio or Eclipse](#use-jboss-developer-studio-or-eclipse-to-run-the-quickstarts) to run the quickstarts. 
-
-
-Run the Quickstarts
+Executando utilizando maven
 -------------------
 
-The root folder of each individual quickstart contains a README file with specific details on how to build and run the example. In most cases you do the following:
+#### Maven
 
-* [Start the WildFly Server](https://github.com/jboss-developer/jboss-developer-shared-resources/blob/master/guides/START_JBOSS_EAP.md#start-the-jboss-eap-server)
-* [Build and deploy the quickstarts](#build-and-deploy-the-quickstarts)
+1. Modulo campanha:
 
+			mvn clean package wildfly-swarm:run
+
+2. Modulo socio-torcedor: 
+
+			mvn clean package wildfly-swarm:run
            
-### Build and Deploy the Quickstarts
+### Executando jar.
 
-See the README file in each individual quickstart folder for specific details and information on how to run and access the example. 
+1. java -jar ..... 
 
-
-#### Build the Quickstart Archive
-
-In most cases, you can use the following steps to build the application to test for compile errors or to view the contents of the archive. See the specific quickstart README file for complete details.
-
-1. Open a command prompt and navigate to the root directory of the quickstart you want to build.
-2. Use this command if you only want to build the archive, but not deploy it:
-
-            mvn clean install
-
-#### Build and Deploy the Quickstart Archive
-
-In most cases, you can use the following steps to build and deploy the application. See the specific quickstart README file for complete details.
-
-1. Make sure you start the WildFly server as described in the quickstart README file.
-2. Open a command prompt and navigate to the root directory of the quickstart you want to run.
-3. Use this command to build and deploy the archive:
-
-            mvn clean install wildfly:deploy
- 
-#### Undeploy an Archive
-
-The command to undeploy the quickstart is simply: 
-
-        mvn wildfly:undeploy
-
-
-### Verify the Quickstarts Build with One Command
--------------------------------------------------
-
-You can verify the quickstarts build using one command. However, quickstarts that have complex dependencies must be skipped. For example, the `resteasy-jaxrs-client` quickstart is a RESTEasy client that depends on the deployment of the _helloworld-rs_ quickstart. As noted above, the root `pom.xml` file defines a `complex-dependencies` profile to exclude these quickstarts from the root build process. 
-
-To build the quickstarts:
-
-1. Do not start the WildFly server.
-2. Open a command prompt and navigate to the root directory of the quickstarts.
-3. Use this command to build the quickstarts that do not have complex dependencies:
-
-            mvn clean install '-Pdefault,!complex-dependencies'
-
-_Note_: If you see a `java.lang.OutOfMemoryError: PermGen space` error when you run this command, increase the memory by typing the following command for your operating system, then try the above command again.
-
-        For Linux:   export MAVEN_OPTS="-Xmx512m -XX:MaxPermSize=128m"
-        For Windows: SET MAVEN_OPTS="-Xmx512m -XX:MaxPermSize=128m"
-
-
-### Undeploy the Deployed Quickstarts with One Command
-------------------------------------------------------
-
-To undeploy the quickstarts from the root of the quickstart folder, you must pass the argument `-fae` (fail at end) on the command line. This allows the command to continue past quickstarts that fail due to complex dependencies and quickstarts that only have Arquillian tests and do not deploy archives to the server.
-
-You can undeploy quickstarts using the following procedure:
-
-1. Start the WildFly server.
-2. Open a command prompt and navigate to the root directory of the quickstarts.
-3. Use this command to undeploy any deployed quickstarts:
-
-            mvn wildfly:undeploy -fae
-
-To undeploy any quickstarts that fail due to complex dependencies, follow the undeploy procedure described in the quickstart's README file.
 
 
 Use JBoss Developer Studio or Eclipse to Run the Quickstarts
